# Paris_House_Pricing

./: .env.example  .gitignore  CLAUDE.md  IRIS_AUDIT.md  IRIS_COVERAGE_AUDIT.md  LISTINGS_FEASIBILITY.md  RANKING_METHODOLOGY_REVIEW.md  README.md  fetch_listings.bat  main.py  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: dag_ai_agent.py  dag_ingest_daily.py  dag_ingest_dvf_biannual.py
analysis/: before_after_rankings.csv  ranking_review.py  value_trap_flags.csv
config/: settings.py  sources.yaml
dashboards/: app.py
dashboards/map/: index.html  index_files.html
database/: 00_extensions.sql  01_schema_core.sql  02_schema_gis.sql  03_partitions.sql  04_indexes.sql  05_materialized_views.sql  06_vector.sql  07_map.sql
database/queries/: price_trends.sql  scoring_inputs.sql  supply_constraint.sql
docker/: Dockerfile  docker-compose.yml  init-db.sh  postgres.Dockerfile
docs/: URBAN_DEVELOPMENT_INTELLIGENCE.md  data_architecture.md  iris_architecture.md  master_strategy.md
notebooks/: 01_city_screening.py
rei/: __init__.py  cli.py
rei/ai_agent/: alerts.py  llm.py  (+6 more)
seeds/: README.md  build_projects.py
tests/: conftest.py  test_accessibility_iris.py  test_climate.py  test_collectors.py  test_concentration.py  test_decompose.py  test_drift.py  test_dvf_transform.py  test_hedonic_value.py  test_http.py  test_liquidity.py  test_liveability.py  test_memo.py  test_ml.py  test_regulatory.py  test_score_backtest.py  test_scoring.py  test_social_housing.py  test_spatial.py  test_tiles.py  test_validate.py
(+67 files in other folders)
